unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/d_wh__Inbound_Call_Body_Node__c.object-meta.xml
<CustomObject>
    <label>Inbound Call Body Node</label>
    <nameField>
        <label>Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound Call Body Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>