unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/fields/d_wh__Criteria_Formula__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Criteria_Formula__c</fullName>
    <label>Criteria Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>