unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/fields/d_wh__Node_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Node_Data_Type__c</fullName>
    <label>Node Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decimal</fullName>
                <label>Number (Decimal)</label>
            </value>
            <value>
                <fullName>Boolean</fullName>
                <label>True/False (Boolean)</label>
            </value>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>Text (String)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>