unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/fields/d_wh__Parent_Node__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Parent_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Node</label>
    <referenceTo>d_wh__Inbound_Call_Body_Node__c</referenceTo>
    <relationshipLabel>Child Nodes</relationshipLabel>
    <relationshipName>Child_Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>