unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/fields/d_wh__Related_List_SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Related_List_SOQL_Filter__c</fullName>
    <label>Related List SOQL Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>