unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/fields/d_wh__Send_null_as_empty_string__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Send_null_as_empty_string__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send null as empty string</label>
    <type>Checkbox</type>
</CustomField>