unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/fields/d_wh__Special_Build_Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Special_Build_Type__c</fullName>
    <label>Special Build Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>