unpackaged/main/default/objects/d_wh__Inbound_Call_Body_Node__c/fields/d_wh__Value_Source__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Value_Source__c</fullName>
    <label>Value Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>